<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainscreen.dashboard.functionpack.goal.GoalCreateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your goal name"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        app:startIconContentDescription="content_description_start_icon"
        app:startIconDrawable="@drawable/ic_goal_set_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalNameInput"
            android:layout_width="match_parent"
            android:layout_height="61dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalTargetPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your goal target money"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        app:startIconContentDescription="content_description_start_icon"
        app:startIconDrawable="@drawable/ic_goal_set_24">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="phone"
            android:digits="1234567890."
            android:id="@+id/goalTargetPriceInput"
            android:layout_width="match_parent"
            android:layout_height="61dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        tools:context=".mainscreen.dashboard.functionpack.goal.GoalCreateActivity"
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="Pick your target date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTargetPrice"
        app:layout_constraintVertical_bias="0.115" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goalCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTargetPrice"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>