...
        app:startIconContentDescription="content_description_start_icon"
        app:startIconDrawable="@drawable/ic_goal_set_24">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="phone"
            android:digits="1234567890."
            android:id="@+id/goalCurrentPriceInput"
            android:layout_width="match_parent"
            android:layout_height="61dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goalUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update your goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
