...
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Scrollable content -->
    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingTop="?attr/actionBarSize"
        android:id="@+id/goalRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
...
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:title="Your goals" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="fab_content_desc"
            app:srcCompat="@drawable/ic_edit_profile_24dp" />
...
