...
            android:drawablePadding="2dp"
            android:text="goal details description"
            android:textColor="@color/black" />

        <!-- Buttons -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/goalDelete"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="100dp"
            android:text="Delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goalSave"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="100dp"
            android:text="New Savings" />
...
